Some more changes to the proposal.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -96,3 +96,18 @@
   year={2001},
   publisher={Springer}
 }
+
+@article{askitis2005ccc,
+  title={{Cache-Conscious Collision Resolution in String Hash Tables}},
+  author={Askitis, N. and Zobel, J.},
+  journal={String Processing and Information Retrieval: 12th International Conference, SPIRE 2005, Buenos Aires, Argentina, November 2-4, 2005: Proceedings},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{olsen2002coa,
+  title={{Cache-Oblivious Algorithms in Practice}},
+  author={Olsen, J.H. and Skov, S.C.},
+  journal={Master's thesis, University of Copenhagen, Copenhagen, Denmark},
+  year={2002}
+}
